Added css, scss and js directories

--- a/MrCMS.Web/MrCMS.Web.csproj
+++ b/MrCMS.Web/MrCMS.Web.csproj
@@ -1975,6 +1975,24 @@
     <Content Include="Areas\Admin\Views\Widget\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Widget\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
+    <Content Include="Content\css\index-carousel.css" />
+    <Content Include="Content\css\sass\lib\_fade-in.scss" />
+    <Content Include="Content\css\sass\lib\_is-loading.scss" />
+    <Content Include="Content\css\sass\modules\_all.scss" />
+    <Content Include="Content\css\sass\modules\_mixins.scss" />
+    <Content Include="Content\css\sass\partials\_article.scss" />
+    <Content Include="Content\css\sass\partials\_base.scss" />
+    <Content Include="Content\css\sass\partials\_footer.scss" />
+    <Content Include="Content\css\sass\partials\_home.scss" />
+    <Content Include="Content\css\sass\partials\_html.scss" />
+    <Content Include="Content\css\sass\partials\_misc.scss" />
+    <Content Include="Content\css\sass\partials\_pages.scss" />
+    <Content Include="Content\css\sass\partials\_testimonials.scss" />
+    <Content Include="Content\css\sass\partials\_z-bootstrap-fixes.scss" />
+    <Content Include="Content\css\sass\partials\_z-mrcms-fixes.scss" />
+    <Content Include="Content\css\sass\site.scss" />
+    <Content Include="Content\css\site.css" />
+    <Content Include="Content\css\style.css" />
     <Content Include="Content\install\images\install-synchronizing.gif" />
     <Content Include="Content\install\scripts\install.js" />
     <Content Include="Content\install\scripts\jquery.validate.js" />
@@ -1985,6 +2003,7 @@
     <Content Include="Apps\Core\Content\Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Apps\Core\Content\Scripts\respond.min.js" />
     <Content Include="Apps\Core\Content\Styles\style.css" />
+    <Content Include="Content\js\main.js" />
     <Content Include="Global.asax" />
     <Content Include="Areas\Admin\Content\Scripts\lib\jquery\ui\jquery-ui-timepicker-addon.js" />
     <Content Include="Content\install\scripts\jquery.validate.unobtrusive.min.js" />
