--- a/MrCMS.Web/web.config
+++ b/MrCMS.Web/web.config
@@ -132,6 +132,8 @@
     </modules>
     <handlers>
       <add name="ckeditor-config" path="Areas/Admin/Content/Editors/ckeditor/config.js" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <!-- Allow Browser Link for HTML Files -->
+      <add name="Browser Link for HTML" path="*.html" verb="*" type="System.Web.StaticFileHandler, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" resourceType="File" preCondition="integratedMode" />
     </handlers>
     <security>
       <requestFiltering>
