--- a/MrCMS.Web/bower.json
+++ b/MrCMS.Web/bower.json
@@ -11,6 +11,7 @@
     "scrollreveal": "^3.0.6",
     "breakpoint-sass": "^2.6.1",
     "susy": "^2.2.10",
-    "readmore-js": "^2"
+    "readmore-js": "^2",
+    "scut": "^1"
   }
 }
